--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "A Database abstraction layer for DaaS",
 	"main": "src/index.ts",
 	"scripts": {
-		"test:unit": "mocha --require ts-node/register test/index.ts --slow 500",
-		"test": "npm run test:unit",
+		"test:integration": "mocha --require ts-node/register test/index.ts --slow 500",
+		"test": "npm run test:integration",
 		"migrate": "ts-node src/migrations/migrate.ts",
 		"reformat": "prettier --write \"**/*.ts\""
 	},
@@ -23,7 +23,10 @@
 		"typescript": "^2.6.1"
 	},
 	"dependencies": {
+		"@daas/model": "file:../daas-model",
+		"@types/lodash": "^4.14.91",
 		"knex": "^0.14.1",
+		"lodash": "^4.17.4",
 		"pg": "^7.4.0"
 	}
 }
