--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "src/index.ts",
 	"scripts": {
 		"test:integration": "mocha --require ts-node/register $NODE_DEBUG_OPTION test/index.ts --slow 500",
-		"test": "npm run test:integration",
+		"test:coverage": "nyc --extension .ts --reporter html --reporter text npm run test:integration",
+		"test": "npm run test:coverage",
 		"migrate": "ts-node src/migrations/migrate.ts",
 		"reformat": "prettier --write \"**/*.ts\""
 	},
@@ -18,6 +19,7 @@
 		"@types/node": "^8.0.53",
 		"chai": "^4.1.2",
 		"mocha": "^4.0.1",
+		"nyc": "^11.3.0",
 		"prettier": "^1.8.2",
 		"ts-node": "^3.3.0",
 		"typescript": "^2.6.1"
