--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"target": "es5",
-		"lib": ["ES2015"]
+		"lib": ["ES2015"],
+		"declaration": true,
+		"sourceMap": true
 	}
 }
