--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/knex": "0.0.65",
 		"@types/mocha": "^2.2.44",
 		"@types/node": "^8.0.53",
+		"@types/pg": "^7.4.1",
 		"chai": "^4.1.2",
 		"mocha": "^4.0.1",
 		"nyc": "^11.3.0",
