--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"target": "es5",
-		"lib": ["ES2015"],
+		"lib": ["ES2015", "DOM"],
 		"declaration": true,
 		"inlineSourceMap": true
 	}
