--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@daas/db-adapter",
-	"version": "0.0.1-dev.10",
+	"version": "0.0.1-dev.15",
 	"description": "A Database abstraction layer for DaaS",
 	"main": "src/index.ts",
 	"scripts": {
@@ -29,10 +29,10 @@
 		"typescript": "^2.6.1"
 	},
 	"dependencies": {
-		"@daas/model": "0.0.1-dev.4",
+		"@daas/model": "https://registry.npmjs.org/@daas/model/-/model-0.0.1-dev.5.tgz",
 		"@types/bcrypt": "^1.0.0",
-		"@types/lodash": "^4.14.91",
 		"@types/knex": "0.0.65",
+		"@types/lodash": "^4.14.91",
 		"bcrypt": "^1.0.3",
 		"knex": "^0.14.1",
 		"lodash": "^4.17.4",
