--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@daas/db-adapter",
-	"version": "0.0.1-dev.15",
+	"version": "0.0.1-dev.16",
 	"description": "A Database abstraction layer for DaaS",
 	"main": "src/index.ts",
 	"scripts": {
@@ -25,11 +25,11 @@
 		"mocha": "^4.0.1",
 		"nyc": "^11.3.0",
 		"prettier": "^1.8.2",
-		"ts-node": "^3.3.0",
+		"ts-node": "^5.0.1",
 		"typescript": "^2.6.1"
 	},
 	"dependencies": {
-		"@daas/model": "https://registry.npmjs.org/@daas/model/-/model-0.0.1-dev.5.tgz",
+		"@daas/model": "0.0.1-dev.8",
 		"@types/bcrypt": "^1.0.0",
 		"@types/knex": "0.0.65",
 		"@types/lodash": "^4.14.91",
